# backendAgent

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_vector_search.py  0003_approval_metadata.py  0004_approval_execution.py  0005_run_checkpoints.py
docs/: implementation-status.md  integration-litemall.md  integration-mcp.md  integration-openapi.md  operations.md  security.md
docs/modules/: README.md
docs/modules/01-core-runtime/: README.md
docs/modules/02-connectors-tools/: README.md
docs/modules/03-knowledge-ingestion/: README.md
docs/modules/04-knowledge-retrieval/: README.md
docs/modules/05-approval-execution/: README.md
evals/: golden_questions.jsonl
scripts/: smoke.py
src/ecommerce_agent/: __init__.py  config.py
tests/integration/: test_database_app.py  test_database_checkpoint.py  test_database_store.py  test_hybrid_retriever.py
tests/unit/: test_agent_events.py  test_agent_nodes.py  test_api.py  test_approval_execution.py  test_approval_service.py  test_audit_service.py  test_auth.py  test_checkpoint.py  test_config.py  test_database.py  test_deployment_config.py  test_embeddings.py  test_evaluation_runner.py  test_golden_questions.py  test_graph_observability.py  test_graph_resume.py  test_identity_rbac.py  test_ingestion_service.py  test_knowledge_extensions.py  test_litemall_mapper.py  test_markitdown_pipeline.py  test_multi_agent_graph.py  test_observability.py  test_prompt_security.py  test_redaction.py  test_retriever.py  test_risk_policy.py  test_service.py  test_tool_registry.py
web/: package-lock.json  package.json  playwright.config.ts  tsconfig.json
web/src/: App.vue  style.css
web/tests/: console.spec.ts
(+61 files in other folders)
