[project]
name = "enterprise-ecommerce-agent"
version = "0.1.0"
description = "通用企业级电商后台 Agent 平台"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "httpx>=0.27",
  "langgraph>=1.2.9,<2",
  "markitdown>=0.1.6",
  "openai>=1.100,<3",
  "sqlalchemy>=2.0,<3",
  "alembic>=1.16,<2",
  "psycopg[binary]>=3.2,<4",
  "pgvector>=0.4,<1",
  "redis>=6,<8",
  "celery>=5.5,<6",
]

[dependency-groups]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24", "ruff>=0.6", "mypy>=1.11", "respx>=0.21"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 160
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ecommerce_agent"]
